--- a/roles/app-secrets/tasks/create-secret.yml
+++ b/roles/app-secrets/tasks/create-secret.yml
@@ -1,11 +1,6 @@
-- name: "Create Secret"
-  template:
-    src: secret.yml
-    dest: /tmp/app-secret.yml
-
 - name: Create Secret
-  k8s:
+  k8s_raw:
     state: present
-    src: /tmp/app-secret.yml
+    definition: "{{ lookup('template', 'secret.yml')}}"
   become: yes
   become_user: root
