--- a/inventories/prod/group_vars/all/all.yaml
+++ b/inventories/prod/group_vars/all/all.yaml
@@ -16,6 +16,8 @@ nfs_mounts:
   - { remote: "{{nfs_server}}:/zpool-126262/WWWSONARQUBE", local: /mnt/sonarqube}
   - { remote: "{{nfs_server}}:/zpool-126262/K8SBACKUP",    local: /mnt/backup}
 
+#  --apiserver-advertise-address 0.0.0.0 --pod-network-cidr=10.32.0.0/12
+
 kubeadm:
   init:
-    options: --ignore-preflight-errors=NumCPU --apiserver-advertise-address 0.0.0.0 --pod-network-cidr=10.32.0.0/12
+    options: --ignore-preflight-errors=NumCPU
