--- a/roles/k8s-cert-manager/tasks/main.yml
+++ b/roles/k8s-cert-manager/tasks/main.yml
@@ -1,16 +1,19 @@
-- name: Helm List
+- name: "Helm List"
   command: helm list
   become: yes
   become_user: root
   register: helm_list
   changed_when: False
 
-- name: Install cert-manager
-  command: helm install --name cert-manager --namespace kube-system stable/cert-manager
+- name: "Install Cert Manager CRDs"
+  command: kubectl apply -f https://raw.githubusercontent.com/jetstack/cert-manager/release-0.6/deploy/manifests/00-crds.yaml
+
+- name: "Install Cert Manager"
+  command: helm install --name cert-manager --set webhook.enabled=false --namespace kube-system stable/cert-manager
   become: yes
   when: "'cert-manager' not in helm_list.stdout"
 
-- name: Create Certificates
+- name: "Create Letsencrypt Issuers"
   include_tasks: create-issuer.yml
   loop_control:
     loop_var: namespace_item
