--- a/roles/k8s-cert-manager/tasks/main.yml
+++ b/roles/k8s-cert-manager/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: "Helm List"
-  command: helm list
+  command: /root/linux-amd64/helm list
   become: yes
   become_user: root
   register: helm_list
@@ -7,10 +7,13 @@
 
 - name: "Install Cert Manager CRDs"
   command: kubectl apply -f https://raw.githubusercontent.com/jetstack/cert-manager/release-0.6/deploy/manifests/00-crds.yaml
+  become: yes
+  become_user: root
 
 - name: "Install Cert Manager"
-  command: helm install --name cert-manager --set webhook.enabled=false --namespace kube-system stable/cert-manager
+  command: /root/linux-amd64/helm install --name cert-manager --set webhook.enabled=false --namespace kube-system stable/cert-manager
   become: yes
+  become_user: root
   when: "'cert-manager' not in helm_list.stdout"
 
 - name: "Create Letsencrypt Issuers"
