--- a/roles/k8s-slave/tasks/main.yml
+++ b/roles/k8s-slave/tasks/main.yml
@@ -1,3 +1,10 @@
+- name: Create Folder /var/lib/kube-proxy
+  file:
+    path: /var/lib/kube-proxy
+    state: directory
+  become: yes
+  become_user: root
+
 - name: "Join cluster {{ hostvars[groups['kubernetes-master'][0]]['join_master'] }}"
   command: "{{ hostvars[groups['kubernetes-master'][0]]['join_master'] | replace('10.0.2.15', '10.0.0.2') }}"
   become: yes
