--- a/roles/tools-common/tasks/main.yml
+++ b/roles/tools-common/tasks/main.yml
@@ -20,8 +20,8 @@
       - ipvsadm
       - yum-utils
       - nc
-      - net-tools 
-      - iptables-services      
+      - net-tools
+      - iptables-services
   become: yes
   become_user: root
 
@@ -42,6 +42,6 @@
 - name: "Install openshift"
   pip:
     name: openshift
-    version: latest
+    version: 0.8
   become: yes
   become_user: root
