--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -35,3 +35,4 @@
     - { role: k8s-cert-manager,       tags: [kubernetes-conf,   k8s-cert-manager], when: public_ip is defined }
     - { role: k8s-ingress-nginx,      tags: [kubernetes-conf,   k8s-ingress-nginx], when: public_ip is defined }
     - { role: k8s-nfs-provisioner,    tags: [kubernetes-conf,   k8s-nfs-provisioner], when: nfs_server is defined }
+    - { role: k8s-dashboard,          tags: [kubernetes-master, dashboard] }
