--- a/roles/k8s-dashboard/tasks/main.yml
+++ b/roles/k8s-dashboard/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Create K8s dashboard
-  command: kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/master/src/deploy/recommended/kubernetes-dashboard.yaml
+  command: kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v1.10.1/src/deploy/recommended/kubernetes-dashboard.yaml
   become: yes
 
 - name: Create ServiceAccount admin-user
