--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,6 +7,10 @@ host_key_checking = False
 #stdout_callback = debug
 #stderr_callback = debug
 
+[inventory]
+# enable inventory plugins, default: 'host_list', 'script', 'yaml', 'ini'
+enable_plugins = yaml
+
 [ssh_connection]
 ssh_args = -o ControlMaster=auto  -o ControlPersist=60s
 pipelining = true
