--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,6 +7,8 @@ host_key_checking = False
 #stdout_callback = debug
 #stderr_callback = debug
 
+[inventory]
+enable_plugins = host_list, script, yaml, ini, auto
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto  -o ControlPersist=60s
