--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,8 @@
 [defaults]
 roles_path = roles
 hostfile = ./ec2.py
+private_key_file = bastion.pem
+remote_user = ec2-user
 
 # disable SSH key host checking
 host_key_checking = False
