--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 roles_path = roles
-hostfile = ./ec2.py
-private_key_file = bastion.pem
+
+private_key_file = ../bastion-key.pem
 remote_user = ec2-user
 
 # disable SSH key host checking
