--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -20,6 +20,11 @@
   become: yes
   become_user: root
 
+- command: yum install http://vault.centos.org/centos/7.3.1611/extras/x86_64/Packages/container-selinux-2.9-4.el7.noarch.rpm
+  become: yes
+  become_user: root
+  ignore_errors: True
+
 - name: "Ensure a list of packages installed"
   yum:
     name: "{{ packages }}"
