--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -17,6 +17,7 @@
     state: present
     update_cache: True
     validate_certs: False
+    disable_gpg_check: True
   vars:
     packages:
     - kubelet
