--- a/roles/k8s-slave/tasks/main.yml
+++ b/roles/k8s-slave/tasks/main.yml
@@ -8,12 +8,12 @@
 - name: "Set kubernetes master group"
   set_fact:
     kubernetes_master_group: 'kubernetes-master'
-  when: "'kubernetes-master' in groups"
+  when: "'tag_Name_master' not in groups"
 
 - name: "Set kubernetes master group"
   set_fact:
     kubernetes_master_group: 'tag_Name_master'
-  when: "'kubernetes-master' not in groups"
+  when: "'tag_Name_master' in groups"
 
 - name: "Join cluster {{ hostvars[groups[kubernetes_master_group][0]]['join_master'] }}"
   command: "{{ hostvars[groups[kubernetes_master_group][0]]['join_master'] | replace('10.0.2.15', '10.0.0.2') }}"
