--- a/roles/k8s-slave/tasks/main.yml
+++ b/roles/k8s-slave/tasks/main.yml
@@ -15,6 +15,9 @@
     kubernetes_master_group: 'tag_Name_master'
   when: "'tag_Name_master' in groups"
 
+- debug:
+    msg: "{{ hostvars[groups[kubernetes_master_group] }} "
+
 - name: "Join cluster {{ hostvars[groups[kubernetes_master_group][0]]['join_master'] }}"
   command: "{{ hostvars[groups[kubernetes_master_group][0]]['join_master'] | replace('10.0.2.15', '10.0.0.2') }}"
   become: yes
