--- a/roles/k8s-slave/tasks/main.yml
+++ b/roles/k8s-slave/tasks/main.yml
@@ -16,7 +16,10 @@
   when: "'tag_Name_master' in groups"
 
 - debug:
-    msg: "{{ hostvars[groups[kubernetes_master_group] }} "
+    msg: kubernetes_master_group
+
+- debug:
+    msg: hostvars[groups[kubernetes_master_group]]
 
 - name: "Join cluster {{ hostvars[groups[kubernetes_master_group][0]]['join_master'] }}"
   command: "{{ hostvars[groups[kubernetes_master_group][0]]['join_master'] | replace('10.0.2.15', '10.0.0.2') }}"
