--- a/roles/k8s-slave/tasks/main.yml
+++ b/roles/k8s-slave/tasks/main.yml
@@ -19,7 +19,10 @@
     msg: kubernetes_master_group
 
 - debug:
-    msg: "{{hostvars}}"
+    msg: "{{groups['tag_Name_master'][0]}}"
+
+- debug:
+    msg: "{{hostvars[groups['tag_Name_master'][0]]}}"
 
 - name: "Join cluster {{ hostvars[groups[kubernetes_master_group][0]]['join_master'] }}"
   command: "{{ hostvars[groups[kubernetes_master_group][0]]['join_master'] | replace('10.0.2.15', '10.0.0.2') }}"
