--- a/roles/k8s-master/tasks/main.yml
+++ b/roles/k8s-master/tasks/main.yml
@@ -104,6 +104,8 @@
   become_user: root
   when: not pki_status.stat.exists
 
+- fail: 
+
 - name: "Copy admin.conf"
   copy:
     src: /etc/kubernetes/admin.conf
