--- a/roles/k8s-master/tasks/main.yml
+++ b/roles/k8s-master/tasks/main.yml
@@ -83,6 +83,16 @@
   become_user: root
   when: pki_status.stat.exists
 
+- debug:
+    msg: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:]  }}"
+
+- debug:
+    msg: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('')  }}"
+
+
+- debug:
+    msg: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace ('\\', '') }}"
+
 - name: "Create join master fact"
   set_fact:
     join_master: "{{ kubeadm_init_message_not_exists.stdout_lines[-2:] | join('') | replace ('\\', '') }}"
